Partial fix for NW-350: Arrays.asList() replaced by List.of().