@@ -27,7 +27,7 @@
 package it.tidalwave.northernwind.core.impl.model;
 
 import javax.annotation.Nonnull;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Locale;
 import org.springframework.context.support.ClassPathXmlApplicationContext;
 import it.tidalwave.northernwind.core.model.Content;
@@ -100,8 +100,8 @@ public class DefaultSiteTest
                                         .withLibraryPath("/content/library")
                                         .withNodePath("/structure")
                                         .withLogConfigurationEnabled(true)
-                                        .withConfiguredLocales(Arrays.asList(new Locale("en"), new Locale("it"), new Locale("fr")))
-                                        .withIgnoredFolders(Arrays.asList("ignored1", "ignored2"));
+                                        .withConfiguredLocales(List.of(new Locale("en"), new Locale("it"), new Locale("fr")))
+                                        .withIgnoredFolders(List.of("ignored1", "ignored2"));
       }
 
     /*******************************************************************************************************************
@@ -119,8 +119,8 @@ public class DefaultSiteTest
         assertThat(underTest.libraryPath, is("/content/library"));
         assertThat(underTest.nodePath, is("/structure"));
         assertThat(underTest.logConfigurationEnabled, is(true));
-        assertThat(underTest.getConfiguredLocales(), is(Arrays.asList(new Locale("en"), new Locale("it"), new Locale("fr"))));
-        assertThat(underTest.ignoredFolders, is(Arrays.asList("ignored1", "ignored2")));
+        assertThat(underTest.getConfiguredLocales(), is(List.of(new Locale("en"), new Locale("it"), new Locale("fr"))));
+        assertThat(underTest.ignoredFolders, is(List.of("ignored1", "ignored2")));
       }
 
     /*******************************************************************************************************************
